# maze

./: Cargo.toml
src/: bin.rs  main.rs  maze.rs
src/maze/: astar.rs  flood.rs
