[package]
name = "maze"
version = "0.1.0"
authors = ["Bartłomiej Kuras <hash.deb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
text_visualize = []

[dependencies]
structopt = "0.3"
rayon = "1.3"
num-bigint = "0.3"
